--- a/src/Pages/Viewmore/Viewmore.css
+++ b/src/Pages/Viewmore/Viewmore.css
@@ -120,3 +120,57 @@ padding: 20px 0 14px 0;
  font-size: 24px;
  padding: 32px 0 150px 0;
 }
+.section3{
+ padding-left: 117px;
+ padding-right: 220px;
+ margin-top: 350px;
+}
+.section3 h2{
+ font-family: Inter;
+font-size: 48px;
+font-weight: 500;
+line-height: 58px;
+letter-spacing: 0em;
+
+}
+.section3 h5{
+ font-size: 24px;
+}
+.section3Content{
+font-family: Inter;
+font-size: 32px;
+font-weight: 300;
+line-height: 39px;
+letter-spacing: 0em;
+text-align: justified;
+
+}
+.amenities{
+ margin-top: 72px;
+ background: #F4F2F2;
+ padding: 49px 0 54px 0;
+ margin-bottom: 121px;
+ 
+}
+.amenities h2{
+ font-family: Inter;
+font-size: 48px;
+font-weight: 500;
+line-height: 58px;
+letter-spacing: 0em;
+text-align: left;
+}
+
+.amenitiesflex{
+ display: flex;
+ gap: 15px;
+ font-family: Inter;
+ font-size: 32px;
+ font-weight: 300;
+ line-height: 39px;
+ letter-spacing: 0em;
+}
+
+.section6{
+ padding-top: 100px;
+}
