--- a/src/Pages/Signup/Signup.css
+++ b/src/Pages/Signup/Signup.css
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 
+}
 body {
     font-family: "DM sans", sans-serif;
     font-size: 16px;
-    background-color: rgba(0,0,0,0.9)
+    /* background-color: rgba(0,0,0,0.9) */
 } 
 
 .login-form {
@@ -11,8 +17,7 @@ body {
     margin: 0 auto;
     background-color: #ffffff;
     background-size: cover;
-    padding: 0 30px 50px 30px;
-    /* border: 1px solid black; */
+    padding: 20px 30px 50px 30px;
     position: fixed;
     top: 0;
     left: 0;
@@ -20,10 +25,9 @@ body {
     bottom: 0;
     z-index: 99999;
     overflow-y: auto;
+    transition: all 1s ease-out;
 }
-.closeModal {
-    display: none;
-}
+
 
 .success_note {
     color: darkgreen;
@@ -32,16 +36,18 @@ body {
     margin: 0 auto;
 }
 
-.close_icon {
-    font-weight: bold;
-    font-size: 40px;
-    display: block;
+.x-icon {
+    /* font-weight: bold; */
+    font-size: 30px;
+    display: inline-block;
     text-align: right;
-    /* position: relative;
-    top: -20px;
-    left: 30%; */
-    
+    position: absolute;
+    width: 20px;
+    top: 0;
+    right: 30px;
+    cursor: pointer;
 }
+
 
 .sign_head {
     text-align: center;
@@ -67,7 +73,7 @@ body {
 }
 
 .input-wrap  {
-    margin: 30px 0;
+    margin: 20px 0;
     width: 100%;
 }
 
@@ -75,8 +81,8 @@ body {
     display: inline-block;
     width: 100%;
     border-radius: 10px;
-    padding: 20px;
-    margin: 10px auto;
+    padding: 15px;
+    margin: 0 auto;
     font-size: 16px;
     border: 1px solid #FCBC0E;
 }
@@ -118,8 +124,11 @@ body {
 .small_tag {
     color: red;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 400;
+    /* display: none; */
 }
+
+
 .or-opt {
     text-align: center;
     margin: 15px 0;
