schedule and view map mobile responsiveness

--- a/src/Pages/SchedulePage/Schedule.css
+++ b/src/Pages/SchedulePage/Schedule.css
@@ -12,7 +12,7 @@
 .scheduleBlock{
  background-color: #F4F2F2;;
  height: 700px;
- max-width: 50%;
+ width: 50%;
  /* margin-left: auto;
  margin-right: auto; */
  margin-top: auto;
@@ -109,13 +109,20 @@ text-align: center;
  margin-top: 70px;
 }
 @media screen and (max-width: 800px){
+ .scheduleBlock{
+  width: 85%;
+ }
+ .scheduleForm{
+  padding: 0 10px 0 10px;
+  margin-top: 50px;
+ }
  .name{
   flex-direction: column;
   justify-content: center;
   padding-bottom: 16px;
  }
  .firstnameLabel{
-  left: -130px;
+  left: -83px;
  }
  .firstNameInput{
   height: 45px;
@@ -124,40 +131,41 @@ text-align: center;
  }
  .lastnameLabel{
   margin-bottom: 10px;
+  margin-top: 10px;
   position: relative;
-  left: -90px;
+  left: -83px;
  }
  .lastNameInput{
   height: 45px;
-  width: 250px;
+  width: 100%;
   padding-left: 15px;
  }
  .emailLabel{
   margin-bottom: 10px;
   position: relative;
-  left: -300px;
+  left: -98px;
  }
  .emailInput{
   height: 45px;
-  width: 645px;
+  width: 100%;
   padding-left: 15px;
  }
  .phonenumber{
-  margin-top: 20px;
+  margin-top: 10px;
  }
  .phonenumberLabel{
   margin-bottom: 10px;
   position: relative;
-  left: -275px;
+  left: -75px;
  }
  .phonenumberInput{
   height: 45px;
-  width: 645px;
+  width: 100%;
   padding-left: 15px;
  }
  .check{
   position: relative;
-  left: -175px;
+  left: 0;
   margin-top: 10px;
  }
  .checkbox{
