--- a/src/Pages/Signup/Signup.css
+++ b/src/Pages/Signup/Signup.css
@@ -182,6 +182,11 @@ body {
 
 }
 @media screen and (max-width: 800px) {
+
+    .login-form {
+        width: 50%;
+        height: 100%m;
+    }
     .login-form {
         width: 90%; 
     }
