--- a/src/Pages/Viewmore/Viewmore.css
+++ b/src/Pages/Viewmore/Viewmore.css
@@ -28,6 +28,7 @@ letter-spacing: 0em;
 text-align: center;
 padding: 11px 0 10px 0;
 color: #000;
+background-color: #FFFFFF;
 }
 .iconblock{
  display: flex;
@@ -124,6 +125,7 @@ padding: 20px 0 14px 0;
  padding-left: 117px;
  padding-right: 220px;
  margin-top: 350px;
+ background-color: #FFFFFF;
 }
 .section3 h2{
  font-family: Inter;
@@ -171,6 +173,15 @@ text-align: left;
  letter-spacing: 0em;
 }
 
+.mapp{
+ width: 60%;
+ margin-left: auto;
+ margin-right: auto;
+}
+
 .section6{
- padding-top: 100px;
+ padding-top: 0px;
+}
+@media screen and only {
+ 
 }
