--- a/src/Pages/Signup/Signup.css
+++ b/src/Pages/Signup/Signup.css
@@ -13,12 +13,12 @@ body {
 
 .login-form {
     width: 40%;
-    height: 100%;
+    height: 75%;
     margin: 0 auto;
     background-color: #ffffff;
     padding: 20px 30px 20px 30px;
     position: fixed;
-    top: 0;
+    top: 40px;
     left: 0;
     right: 0;
     bottom: 0;
