--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -1,6 +1,21 @@
-.catalogueContainer{
+/* .catalogueContainer{
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 150px 115px 120px 115px;
+} */
+.moreBTN{
+ margin-bottom: 70px;
+ width: 20%;
+ margin-left: auto;
+ margin-right: auto;
+}
+@media screen and (max-width:800px) {
+ .moreBTN{
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 70px;
+ }
+ 
 }
