--- a/src/Pages/Viewmore/Viewmore.css
+++ b/src/Pages/Viewmore/Viewmore.css
@@ -74,7 +74,7 @@ max-width: 561px;
 }
 .apartmentSection{
  height: 300px;
-width: 286px;
+max-width: 286px;
 background: #FFFFFF;
 border-radius: 15px;
 }
@@ -191,20 +191,26 @@ text-align: left;
  }
  .apartmentDetailsBlock{
   flex-direction: column;
-  margin-top: 80px;
-  /* justify-content: space-between; */
+  margin-top: 30px;
+  justify-content: center;
   gap: 20px;
   margin-bottom: 124px;
+
  }
  .apart{
   font-size: 28px;
   margin-bottom: 20px;
+  text-align: center;
  }
  .apartmentBathRoom{
   /* padding-top: 40px; */
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
  }
  .apartmentSection{
   margin-top: 20px;
+  
  }
  .blockImg{
   flex-wrap: wrap;
@@ -222,5 +228,8 @@ text-align: left;
   width: 90%;
   margin-left: 0;
   margin-right: 0;
+ }
+ .viewmoresection5{
+  /* width: 270px; */
  }
 }
