--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -9,17 +9,14 @@
     width: 582px;
     font-family: 'DM Sans', sans-serif;
     font-style: normal;
-    /* position: relative; */
     position: fixed;
     padding: 40px 41px;
     margin: 2% 30%;
-    /* margin: 0 auto; */
-    /* top: 10%;
-    bottom: 10%; */
-    /* left: 30%; */
     background-color: #FFFFFF;
     z-index: 500;
-    transition: all 0.3s ease-out;
+    transition: all 1s ease-out;
+    overflow-y: auto;
+    height: auto;
 }
 .login-heading{
     font-weight: 700;
@@ -140,18 +137,21 @@ text-align: center;
 }
 @media screen and (max-width: 1100px) {
     .login-container{
-    margin: 10% 21%
+    margin: 3% 21%;
+    height: 90%;
     }
 }
 @media screen and (max-width: 900px) {
     .login-container{
-    margin: 10% 14%
+    margin: 1% 14%
     }
 }
 
 @media screen and (max-width: 768px) {
     .login-container{
-        width: 500px
+        width: 500px;
+        margin: 4% 17%;
+        /* height: 80%; */
     }
 }
 @media screen and (max-width: 600px) {
@@ -169,6 +169,7 @@ text-align: center;
     .login-container{
         width: 300px;
         padding: 40px 10px;
+        margin: 10% 15%;
     }
     .checkbox-label-container{
         gap: 3px;
@@ -176,12 +177,12 @@ text-align: center;
 }
 @media screen and (max-width: 400px) {
     .login-container{
-        margin: 10% 13%;
+        margin: 10% 11%;
     }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 321px) {
     .login-container{
-        margin: 10% 8%;
+        margin: 10% 4%;
     }
 }
 
