--- a/src/Components/DetailsForm/DetailsForm.css
+++ b/src/Components/DetailsForm/DetailsForm.css
@@ -9,7 +9,7 @@
 
 /* Styles for containers */
 
-.payforms_wrapper {
+.payformsWrapper {
     width: 80%;
     margin: 30px auto;
     padding: 20px;
@@ -18,7 +18,7 @@
     
 }
 
-.tag_h2 {
+.tagH2 {
     border-bottom: 1px solid gray;
     margin-bottom: 20px;
     padding: 10px 0;
@@ -31,7 +31,7 @@
     margin-top: 30px;
 }
 
-.PI_form, .Add_I, .Emp_I {
+.PIForm, .Add_I, .Emp_I {
     display: flex;
     justify-content:space-between;
     flex-wrap: wrap;
@@ -40,34 +40,34 @@
 
 
 /* styles for labels and input */
-.pay_input {
+.payInput {
     display: flex;
     flex-direction: row;
     padding: 0 20px;
     /* justify-content: space-between; */
 }
-.tag_label, .tag_input{
+.tagLabel, .tagInput{
     display: inline-block;
     margin: 7px 0;
 }
-.tag_input {
+.tagInput {
     padding: 7px 10px;
     font-size: 12px;
 }
-.tag_select {
+.tagSelect {
     margin: 7px 0;
     width: 250px;
     padding: 6px 10px;
 }
-.titled_select {
+.titledSelect {
     margin: 7px 0;
     padding: 6px 10px;
 }
 
-.tag_label {
+.tagLabel {
     width: 150px;
 }
-.tag_input {
+.tagInput {
     width: 250px;
 }
 
