--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -77,6 +77,14 @@
 
 }
 
+.userIcon{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+
 
 /* Mobile responsiveness reversal */
 #hamburger{
