--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -3,12 +3,14 @@
 }
 
 .hero{
-    background-image: linear-gradient(359.38deg, rgba(11, 0, 0, 0.96) 2.23%, rgba(11, 0, 0, 0.05) 41.31%, rgba(11, 0, 0, 0) 50.45%), 
+    background-image: linear-gradient(359.38deg, rgba(11, 0, 0, 0.96) 2.23%, 
+                    rgba(11, 0, 0, 0.05) 41.31%, rgba(11, 0, 0, 0) 50.45%), 
                         url('../../Assets/landing-background.svg');
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: darken;
     height: 100vh;
+    position: relative;
 }
 
 .navcomponent{
@@ -22,7 +24,7 @@
     font-size: 3.5rem;
     line-height: 3.5rem;
     text-align: center;
-    padding: 6rem 2rem 2rem 2rem;
+    padding: 10% 2rem 2rem 2rem;
     text-transform: capitalize;
 }
 
@@ -34,6 +36,9 @@
     align-items: center;
     margin: 0 20rem;
     padding: 0.5rem;
+    /* position: fixed; */
+   
+
 }
 
 #herosearch{
@@ -59,7 +64,9 @@
 .captiondiv{
     background-color: black;
     width: 25rem;
-    margin-top: 9rem;
+    position: absolute;
+    bottom: 5rem;
+    left: 0;
 }
 
 
@@ -238,10 +245,6 @@
         width: 2rem;
     }
 
-    .captiondiv{
-        margin-top: 3.5rem;
-    }
-
     .section2heading, .section3heading{
         font-size: 2.5rem;
     }
@@ -268,6 +271,15 @@
 
     #herosearch::placeholder{
         letter-spacing: 0.15em;
+    }
+
+    .captiondiv{
+        width: 20rem;
+    }
+
+    .caption{
+        font-size: 18px;
+        width: 18rem;
     }
 
     .section2heading, .section3heading, .section2subheading{
