--- a/src/Pages/ForgetPassword/ForgetPassword.css
+++ b/src/Pages/ForgetPassword/ForgetPassword.css
@@ -8,7 +8,7 @@
 body {
     font-family: "DM sans", sans-serif;
     font-size: 16px;
-    background-color: rgba(0,0,0,0.9)
+    /* background-color: rgba(0,0,0,0.9) */
 } 
 
 .reset_body {
