About to pull from main

--- a/src/Components/Searchbar/Searchbar.css
+++ b/src/Components/Searchbar/Searchbar.css
@@ -13,7 +13,7 @@
     left: 35%;
     margin: 0 auto;
     text-align: center;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     overflow: hidden;
     overflow-y: auto;
     height: fit-content;
@@ -59,7 +59,6 @@
 @media screen and (max-width: 450px) {
     .searchfilter{
         left: 18%;
-        /* width: 17rem; */
     }
 }
 
