Add a carousel component

--- a/src/Pages/Viewmore/Viewmore.css
+++ b/src/Pages/Viewmore/Viewmore.css
@@ -114,10 +114,23 @@ padding: 20px 0 14px 0;
  display: flex;
  justify-content: space-evenly;
 }
+.blockShowdiv{
+    text-align: center;
+    margin: 2rem auto;
+}
 .blockShow{
- text-align: center;
  font-size: 24px;
- padding: 22px 0 150px 0;
+ border: none;
+ background-color: white;
+ cursor: pointer;
+}
+.blockShow:hover{
+    color: rgb(80, 76, 76);
+    font-size: 26px;
+}
+
+.viewmorecarousel{
+    /* z-index: 1000 !important; */
 }
 .calendarSection{
  height: 760px;
