payment page with payment implemented

--- a/src/Components/Payment/Payment.css
+++ b/src/Components/Payment/Payment.css
@@ -1,117 +1,128 @@
-.paymentBlock{
- max-width: 1105px;
- height: 500px;
- padding: 39px 39px 79px 51px;
- border: 2px solid gold;
-}
-.paymentHeading{
-padding-bottom: 24px;
-border-bottom: 1px solid #0A0505;
-font-family: Inter;
-font-size: 32px;
-font-weight: 400;
-line-height: 39px;
-}
-.paymentSubBlock{
- display: flex;
- margin-top: 40px;font-family: Inter;
- font-size: 18px;
- font-weight: 400;
- line-height: 22px;
-}
-.paymentImages{
- color: blue;
-}
-.paymentInputFlex{
- display: flex;
- padding-top: 33px;
- padding-right: 231px;
- justify-content: space-between;
- /* align-items: center; */
-}
-.label1{
- padding-right: 15px;
- 
-}
-.label2{
- padding-right: 15px;
- padding-left: 50px;
-}
-.label3{
- padding-right: 21px;
-}
-.label4{
- padding-right: 47px;
- padding-left: 50px;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap");
 
-}
-.cardp{
- height: 30px;
- width: 258px;
- border: 1px solid #0A0505;
- padding-left: 10px;
-}
-.cardp::placeholder{
- opacity: 0;
-}
-.cardw{
- height: 30px;
- width: 205px;
- border: 1px solid #0A0505;
- padding-left: 10px;
-}
-.cardw::placeholder{
- opacity: 0;
-}
-.paymentInputFlex2{
- display: flex;
- padding-top: 28px;
- padding-right: 231px;
- justify-content: space-between;
-}
-.paynowBTNBlock{
- margin-top: 78px;
- margin-left: auto;
- margin-right: auto;
- width: 25%;
-}
-@media screen and (max-width:800px) {
- .paymentBlock{
- padding: 39px 39px 79px 25px;
+/* .App {
+  text-align: center;
+  font-family: "Roboto";
+  letter-spacing: 0.1rem;
+} */
 
- }
- .paymentInputFlex{
+/* .container {
+  display: flex;
+  flex-direction: row;
+  margin: 5% auto;
+  width: 635px;
+  height: 430px;
+  background: white;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
+} */
+
+/* .item {
+  width: 50%;
+  position: relative;
+} */
+
+/* .item-image {
+  height: 430px;
+  width: 100%;
+  object-fit: cover;
+} */
+
+.overlay-effect {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.2;
+  background-color: #303030;
+  overflow: hidden;
+  z-index: 1;
+}
+
+/* .item-details {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 5px;
+  margin-left: 20px;
+  color: #84a17d;
+  text-align: left;
+}
+
+.item-details__title {
+  font-size: 22px;
+}
+
+.item-details__amount {
+  font-weight: bolder;
+} */
+
+.payment-form-flex{
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    /* width: 100%; */
+}
+
+.checkout {
+  background: #84a17d;
+
+  display: flex;
   flex-direction: column;
-  padding-top: 33px;
-  padding-right: 0px;
-  gap: 15px;
   justify-content: center;
- }
- .paymentInputFlex2{
+  height: 430px;
+  width: 50%;
+}
+
+.checkout-form {
+  padding: 20px 20px;
+  width: 100%;
+}
+
+.checkout-field {
+  display: flex;
   flex-direction: column;
-  gap: 15px;
-  padding-top: 15px;
-  padding-right: 0px;
- }
- .label1,.label2,.label3,.label4{
-  display: none;
-  padding-right: 0px;
- padding-left: 0px;
- }
- .cardp{
-  height: 30px;
-  width: 258px;
-  border: 1px solid #0A0505;
- }
- .cardp::placeholder{
-  opacity: 1;
- }
- .cardw{
-  height: 30px;
-  width: 258px;
-  border: 1px solid #0A0505;
- }
- .cardw::placeholder{
-  opacity: 1;
- }
+  margin-bottom: 20px;
+}
+
+.checkout-field label {
+  text-align: left;
+  color: #0A0505;
+  font-size: 10px;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+}
+
+.checkout-field input {
+  background-color: transparent;
+  border: 1px solid #cecece;
+  border-radius: 5px;
+  color: #0A0505;
+  height: 35px;
+  width: 50%;
+}
+
+.paystack-button {
+  cursor: pointer;
+  text-align: center;
+  font-size: 10px;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  background-color: #FCBC0E;
+  font-weight: bold;
+  color: #e0eafc;
+  border: none;
+  border-radius: 5px;
+  width: 50%;
+  height: 45px;
+  margin-top: 40px;
+  
+}
+@media screen and (max-width: 768px) {
+    .paystack-button{
+        width: 100%;
+    }
+    .checkout-field input{
+        width: 100%;
+    } 
 }
